--- a/img/sameas.graffle/data.plist
+++ b/img/sameas.graffle/data.plist
@@ -7,7 +7,7 @@
 	<key>ApplicationVersion</key>
 	<array>
 		<string>com.omnigroup.OmniGraffle</string>
-		<string>139.7.0.167456</string>
+		<string>139.16.0.171715</string>
 	</array>
 	<key>AutoAdjust</key>
 	<true/>
@@ -46,25 +46,20 @@
 	<key>Creator</key>
 	<string>Daniel Smith</string>
 	<key>DisplayScale</key>
-	<string>1 0/72 in = 1 0/72 in</string>
+	<string>1 0/72 in = 1.0000 in</string>
 	<key>GraphDocumentVersion</key>
 	<integer>8</integer>
 	<key>GraphicsList</key>
 	<array>
 		<dict>
 			<key>Bounds</key>
-			<string>{{607.4667398028073, 294.74779487454276}, {124.98757934570312, 40}}</string>
+			<string>{{366.08552008289882, 242.63249810593743}, {65.491241455078125, 40}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
-			<key>Head</key>
-			<dict>
-				<key>ID</key>
-				<integer>6</integer>
-			</dict>
 			<key>ID</key>
-			<integer>29</integer>
+			<integer>39</integer>
 			<key>Rotation</key>
-			<real>275.08538818359375</real>
+			<real>279.6405029296875</real>
 			<key>Shape</key>
 			<string>AdjustableArrow</string>
 			<key>ShapeData</key>
@@ -139,7 +134,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{536, 181}, {343, 70}}</string>
+			<string>{{262, 183}, {343, 70}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -169,13 +164,13 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{496, 28}, {359, 449}}</string>
+			<string>{{221, 117}, {392, 258}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
-			<integer>6</integer>
+			<integer>41</integer>
 			<key>ImageID</key>
-			<integer>3</integer>
+			<integer>8</integer>
 			<key>Shape</key>
 			<string>Rectangle</string>
 			<key>Style</key>
@@ -199,43 +194,13 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{91, 28}, {359, 449}}</string>
+			<string>{{605, 123}, {408, 267}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
-			<integer>5</integer>
+			<integer>40</integer>
 			<key>ImageID</key>
-			<integer>3</integer>
-			<key>Shape</key>
-			<string>Rectangle</string>
-			<key>Style</key>
-			<dict>
-				<key>fill</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>shadow</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>stroke</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-			</dict>
-		</dict>
-		<dict>
-			<key>Bounds</key>
-			<string>{{889, 24}, {387, 472}}</string>
-			<key>Class</key>
-			<string>ShapedGraphic</string>
-			<key>ID</key>
-			<integer>9</integer>
-			<key>ImageID</key>
-			<integer>4</integer>
+			<integer>7</integer>
 			<key>Shape</key>
 			<string>Rectangle</string>
 			<key>Style</key>
@@ -270,7 +235,7 @@
 	<key>HPages</key>
 	<integer>1</integer>
 	<key>ImageCounter</key>
-	<integer>5</integer>
+	<integer>9</integer>
 	<key>ImageLinkBack</key>
 	<array>
 		<dict/>
@@ -279,8 +244,8 @@
 	</array>
 	<key>ImageList</key>
 	<array>
-		<string>image4.tiff</string>
-		<string>image3.tiff</string>
+		<string>image8.png</string>
+		<string>image7.png</string>
 		<string>image2.tiff</string>
 	</array>
 	<key>KeepToScale</key>
@@ -320,7 +285,7 @@
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2012-09-14 19:10:06 +0000</string>
+	<string>2012-09-18 19:38:39 +0000</string>
 	<key>Modifier</key>
 	<string>Daniel Smith</string>
 	<key>NotesVisible</key>
@@ -356,7 +321,7 @@
 		<key>NSPaperName</key>
 		<array>
 			<string>string</string>
-			<string>A0</string>
+			<string>3EA6ABCC-46B6-42E1-AB05-F8462BD6209D</string>
 		</array>
 		<key>NSPaperSize</key>
 		<array>
@@ -411,7 +376,7 @@
 			</dict>
 		</array>
 		<key>Frame</key>
-		<string>{{37, 65}, {1500, 950}}</string>
+		<string>{{55, 1}, {1500, 950}}</string>
 		<key>ListView</key>
 		<true/>
 		<key>OutlineWidth</key>
