--- a/img/screenshot.graffle/data.plist
+++ b/img/screenshot.graffle/data.plist
@@ -60,13 +60,15 @@
 	<array>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1098.8511014807586, 566}, {156.1144224919646, 15}}</string>
+			<string>{{929.16751269035535, 676.16751269035524}, {52.664974619289275, 15}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>HFlip</key>
 			<string>YES</string>
 			<key>ID</key>
 			<integer>37</integer>
+			<key>Rotation</key>
+			<real>90</real>
 			<key>Shape</key>
 			<string>AdjustableArrow</string>
 			<key>ShapeData</key>
@@ -134,13 +136,13 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{262.52959211567122, 627.50000541671739}, {62.850881526708555, 15}}</string>
+			<string>{{289.8329443856893, 543.83295760283545}, {59.334129333496094, 15}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
 			<integer>36</integer>
 			<key>Rotation</key>
-			<real>359.8487548828125</real>
+			<real>90</real>
 			<key>Shape</key>
 			<string>AdjustableArrow</string>
 			<key>ShapeData</key>
@@ -208,13 +210,13 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{262.16869489145438, 197.08292830329623}, {62.850881526708555, 15}}</string>
+			<string>{{287.74999423391728, 316.24996051801315}, {63.500026702880859, 15}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
 			<integer>35</integer>
 			<key>Rotation</key>
-			<real>359.8487548828125</real>
+			<real>270</real>
 			<key>Shape</key>
 			<string>AdjustableArrow</string>
 			<key>ShapeData</key>
@@ -282,13 +284,15 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{898.05910855300226, 586}, {356.94088745117188, 15}}</string>
+			<string>{{839, 661}, {82.999999999999901, 15}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>HFlip</key>
 			<string>YES</string>
 			<key>ID</key>
 			<integer>34</integer>
+			<key>Rotation</key>
+			<real>90</real>
 			<key>Shape</key>
 			<string>AdjustableArrow</string>
 			<key>ShapeData</key>
@@ -356,13 +360,15 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{898.01980191237521, 353.25074747910253}, {356.94575298978089, 15}}</string>
+			<string>{{830.25, 372.5}, {68.5, 15}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>HFlip</key>
 			<string>YES</string>
 			<key>ID</key>
 			<integer>33</integer>
+			<key>Rotation</key>
+			<real>90</real>
 			<key>Shape</key>
 			<string>AdjustableArrow</string>
 			<key>ShapeData</key>
@@ -430,7 +436,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1171.6673142048144, 197.12534386356677}, {83.310295104980469, 15.000033621423347}}</string>
+			<string>{{971.73313511981587, 164.37470177530531}, {31.75041389465332, 15.001010074914117}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>HFlip</key>
@@ -438,7 +444,7 @@
 			<key>ID</key>
 			<integer>27</integer>
 			<key>Rotation</key>
-			<real>359.82754516601562</real>
+			<real>270</real>
 			<key>Shape</key>
 			<string>AdjustableArrow</string>
 			<key>ShapeData</key>
@@ -506,7 +512,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1265, 553}, {185, 64}}</string>
+			<string>{{857, 710}, {185, 64}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -562,7 +568,7 @@
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf340
 \cocoascreenfonts1{\fonttbl\f0\froman\fcharset0 Times-Roman;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
@@ -578,7 +584,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{32, 619}, {221, 32}}</string>
+			<string>{{312, 483.41707611083984}, {221, 32}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -636,7 +642,7 @@
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf340
 \cocoascreenfonts1{\fonttbl\f0\froman\fcharset0 Times-Roman;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural
@@ -650,7 +656,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1265, 188.6253662109375}, {241, 32}}</string>
+			<string>{{1004, 143.250732421875}, {241, 32}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -706,7 +712,7 @@
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf340
 \cocoascreenfonts1{\fonttbl\f0\froman\fcharset0 Times-Roman;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
@@ -720,7 +726,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{1265, 344.750732421875}, {138, 32}}</string>
+			<string>{{765, 416}, {138, 32}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -776,7 +782,7 @@
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf340
 \cocoascreenfonts1{\fonttbl\f0\froman\fcharset0 Times-Roman;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
@@ -790,7 +796,7 @@
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{113, 186.16586303710938}, {138, 32}}</string>
+			<string>{{312, 364}, {138, 32}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -846,7 +852,7 @@
 				<key>Pad</key>
 				<integer>0</integer>
 				<key>Text</key>
-				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187
+				<string>{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf340
 \cocoascreenfonts1{\fonttbl\f0\froman\fcharset0 Times-Roman;}
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
@@ -944,7 +950,7 @@
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2012-09-18 21:53:26 +0000</string>
+	<string>2013-01-10 08:44:46 +0000</string>
 	<key>Modifier</key>
 	<string>Daniel Smith</string>
 	<key>NotesVisible</key>
@@ -980,7 +986,7 @@
 		<key>NSPaperName</key>
 		<array>
 			<string>string</string>
-			<string>E776BC2A-9FFA-4576-8DA0-BA3E3BC9C02D</string>
+			<string>185CB9A1-3685-4782-B1BA-52898C0BD865</string>
 		</array>
 		<key>NSPaperSize</key>
 		<array>
@@ -1049,7 +1055,7 @@
 		<key>SidebarWidth</key>
 		<integer>120</integer>
 		<key>VisibleRegion</key>
-		<string>{{176, 70}, {1232, 797}}</string>
+		<string>{{193, 71}, {1232, 797}}</string>
 		<key>Zoom</key>
 		<real>1</real>
 		<key>ZoomValues</key>
